api_versioned_docs/version-12.0.0/avalonia/controls/selection/index.mdx
---
title: 'Avalonia.Controls.Selection'
hide_title: true
slug: '/avalonia/controls/selection'
uid: 'Avalonia.Controls.Selection'
commentId: 'N:Avalonia.Controls.Selection'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Selection'
tfms:
  - 'net10.0'
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Selection Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Selection`

</div>

## Types

- [ISelectionModel](iselectionmodel.mdx)
- [SelectedItems&lt;T&gt;.Untyped&lt;T&gt;](selecteditems-1-untyped.mdx)
- [SelectionModelExtensions](selectionmodelextensions.mdx)
- [SelectionModelExtensions.BatchUpdateOperation](selectionmodelextensions-batchupdateoperation.mdx)
- [SelectionModelIndexesChangedEventArgs](selectionmodelindexeschangedeventargs.mdx)
- [SelectionModelSelectionChangedEventArgs](selectionmodelselectionchangedeventargs.mdx)
- [SelectionModelSelectionChangedEventArgs&lt;T&gt;](selectionmodelselectionchangedeventargs-1.mdx)
- [SelectionModel&lt;T&gt;](selectionmodel-1.mdx)
- [SelectionModel&lt;T&gt;.BatchUpdateOperation&lt;T&gt;](selectionmodel-1-batchupdateoperation.mdx)
- [SelectionNodeBase&lt;T&gt;](selectionnodebase-1.mdx) - Base class for selection models.
- [TreeDataGridCellSelectionModel&lt;TModel&gt;](treedatagridcellselectionmodel-1.mdx) - Implements cell selection functionality for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridCellSelectionModel&lt;TModel&gt;.BatchUpdateOperation&lt;TModel&gt;](treedatagridcellselectionmodel-1-batchupdateoperation.mdx) - Represents a batch update operation that defers selection change notifications.
- [TreeDataGridIndexesChangedEventArgs](treedatagridindexeschangedeventargs.mdx) - Holds data for the [Avalonia.Controls.Selection.TreeDataGridSelectionModel.IndexesChanged](xref:Avalonia.Controls.Selection.TreeDataGridSelectionModel.IndexesChanged) event.
- [TreeDataGridItemsResetEventArgs](treedatagriditemsreseteventargs.mdx) - Provides data for the [Avalonia.Controls.Selection.TreeDataGridSelectionModel.SourceReset](xref:Avalonia.Controls.Selection.TreeDataGridSelectionModel.SourceReset) event.
- [TreeDataGridRowSelectionModel&lt;TModel&gt;](treedatagridrowselectionmodel-1.mdx) - Implements row selection functionality for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridRowSelectionModel&lt;TModel&gt;.BatchUpdateOperation&lt;TModel&gt;](treedatagridrowselectionmodel-1-batchupdateoperation.mdx) - Represents a batch update operation that defers selection change notifications.
- [TreeDataGridSelectionChangedEventArgs](treedatagridselectionchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.Selection.TreeDataGridSelectionModel.SelectionChanged](xref:Avalonia.Controls.Selection.TreeDataGridSelectionModel.SelectionChanged) event.
- [TreeDataGridSelectionChangedEventArgs&lt;T&gt;](treedatagridselectionchangedeventargs-1.mdx) - Provides strongly-typed data for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) selection changed event.
- [TreeDataGridSelectionModel](treedatagridselectionmodel.mdx) - Base class for selection models in [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
</ApiRefPage>

