api_versioned_docs/version-12.0.0-rc1/avalonia/controls/selection/index.mdx
---
title: 'Avalonia.Controls.Selection'
hide_title: true
slug: '/avalonia/controls/selection'
uid: 'Avalonia.Controls.Selection'
commentId: 'N:Avalonia.Controls.Selection'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Selection'
tfms:
  - 'net10.0'
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Selection Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Selection`

</div>

## Types

- [ISelectionModel](iselectionmodel.mdx)
- [ITreeDataGridCellSelectionModel](itreedatagridcellselectionmodel.mdx) - Maintains the cell selection state for an [Avalonia.Controls.ITreeDataGridSource](xref:Avalonia.Controls.ITreeDataGridSource).
- [ITreeDataGridCellSelectionModel&lt;T&gt;](itreedatagridcellselectionmodel-1.mdx) - Maintains the cell selection state for an [Avalonia.Controls.ITreeDataGridSource](xref:Avalonia.Controls.ITreeDataGridSource).
- [ITreeDataGridRowSelectionModel](itreedatagridrowselectionmodel.mdx) - Maintains the row selection state for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [ITreeDataGridRowSelectionModel&lt;T&gt;](itreedatagridrowselectionmodel-1.mdx) - Provides strongly-typed access to the row selection state for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid)
control.
- [ITreeDataGridSelection](itreedatagridselection.mdx) - Base interface for [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) selection models that provides common functionality
for both row and cell selection.
- [ITreeDataGridSelectionInteraction](itreedatagridselectioninteraction.mdx) - Defines the interaction between a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) and an
[Avalonia.Controls.Selection.ITreeDataGridSelection](xref:Avalonia.Controls.Selection.ITreeDataGridSelection) model.
- [ITreeSelectionModel](itreeselectionmodel.mdx) - Stores and manipulates the selection state of of items in a hierarchical data source.
- [SelectedItems&lt;T&gt;.Untyped&lt;T&gt;](selecteditems-1-untyped.mdx)
- [SelectionModelExtensions](selectionmodelextensions.mdx)
- [SelectionModelExtensions.BatchUpdateOperation](selectionmodelextensions-batchupdateoperation.mdx)
- [SelectionModelIndexesChangedEventArgs](selectionmodelindexeschangedeventargs.mdx)
- [SelectionModelSelectionChangedEventArgs](selectionmodelselectionchangedeventargs.mdx)
- [SelectionModelSelectionChangedEventArgs&lt;T&gt;](selectionmodelselectionchangedeventargs-1.mdx)
- [SelectionModel&lt;T&gt;](selectionmodel-1.mdx)
- [SelectionModel&lt;T&gt;.BatchUpdateOperation&lt;T&gt;](selectionmodel-1-batchupdateoperation.mdx)
- [SelectionNodeBase&lt;T&gt;](selectionnodebase-1.mdx) - Base class for selection models.
- [TreeDataGridCellSelectionChangedEventArgs](treedatagridcellselectionchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.Selection.ITreeDataGridCellSelectionModel.SelectionChanged](xref:Avalonia.Controls.Selection.ITreeDataGridCellSelectionModel.SelectionChanged) event.
- [TreeDataGridCellSelectionChangedEventArgs&lt;T&gt;](treedatagridcellselectionchangedeventargs-1.mdx) - Provides data for the [Avalonia.Controls.Selection.ITreeDataGridCellSelectionModel&lt;T&gt;.SelectionChanged](xref:Avalonia.Controls.Selection.ITreeDataGridCellSelectionModel%601.SelectionChanged) event.
- [TreeDataGridCellSelectionModel&lt;TModel&gt;](treedatagridcellselectionmodel-1.mdx) - Implements cell selection functionality for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridRowSelectionModel&lt;TModel&gt;](treedatagridrowselectionmodel-1.mdx) - Implements row selection functionality for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeSelectionModelBase&lt;T&gt;](treeselectionmodelbase-1.mdx) - Base class for selection models in [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [TreeSelectionModelBase&lt;T&gt;.BatchUpdateOperation&lt;T&gt;](treeselectionmodelbase-1-batchupdateoperation.mdx) - Represents a batch update operation that defers selection change notifications.
- [TreeSelectionModelIndexesChangedEventArgs](treeselectionmodelindexeschangedeventargs.mdx) - Holds data for the [Avalonia.Controls.Selection.ITreeSelectionModel.IndexesChanged](xref:Avalonia.Controls.Selection.ITreeSelectionModel.IndexesChanged) event.
- [TreeSelectionModelSelectionChangedEventArgs](treeselectionmodelselectionchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.Selection.ITreeSelectionModel.SelectionChanged](xref:Avalonia.Controls.Selection.ITreeSelectionModel.SelectionChanged) event.
- [TreeSelectionModelSelectionChangedEventArgs&lt;T&gt;](treeselectionmodelselectionchangedeventargs-1.mdx) - Provides strongly-typed data for the
[Avalonia.Controls.Selection.TreeSelectionModelBase&lt;T&gt;.SelectionChanged](xref:Avalonia.Controls.Selection.TreeSelectionModelBase%601.SelectionChanged) event.
- [TreeSelectionModelSourceResetEventArgs](treeselectionmodelsourcereseteventargs.mdx) - Provides data for the [Avalonia.Controls.Selection.TreeSelectionModelBase&lt;T&gt;.SourceReset](xref:Avalonia.Controls.Selection.TreeSelectionModelBase%601.SourceReset) event.
</ApiRefPage>

